# lma-explorer.github.io

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DECISIONS_LOG.md  GOVERNANCE.md  LICENSE  LICENSE-DATA.md  PHASE1_PLAN.md  README.md  REPO_TREE.md  ROADMAP_TREE.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  data_source_drift.yml  feature_request.yml
.github/workflows/: bls_cpi_refresh.yml  clovis_refresh.yml  quality.yml  site_build.yml
data/processed/: MANIFEST.json  clovis_MANIFEST.json  clovis_basis_2026-04-25.parquet  clovis_basis_2026-04-28.parquet  clovis_basis_MANIFEST.json  clovis_historical_MANIFEST.json  clovis_historical_era_b_2026-04-24.parquet  clovis_historical_era_b_2026-04-25.parquet  clovis_spike_log_2026-05-06.csv  clovis_weekly_2026-04-23.parquet  clovis_weekly_2026-04-30.parquet  clovis_weekly_2026-05-08.parquet  clovis_weekly_cleaned_MANIFEST.json  clovis_weekly_cleaned_latest.parquet  cme_feeders_MANIFEST.json  cme_feeders_latest.parquet  cpi_latest.parquet  lrp_MANIFEST.json
pipelines/: requirements.txt
pipelines/bls/: README.md  expected_schema.sha256  ingest.py  snapshot.py  validate.py
pipelines/clovis/: README.md  basis.py  clean.py  expected_schema.sha256  ingest.py  load.py  snapshot.py  validate.py
pipelines/clovis_historical/: PARSER_NOTES.md  download_era_b.py  era_b_txt.py  ingest_era_b.py  probe_mars_depth.py  reference_reader.py  validate.py
pipelines/cme_feeders/: ingest.py  probe.py
pipelines/lrp/: README.md  backtest.py  expected_schema.sha256  ingest.py  load.py  parse.py  snapshot.py  validate.py
scripts/: check_no_debug.py  pin_actions_to_sha.sh  prepare_downloads.py  render_og_card.py
site/: 404.qmd  _quarto.yml  about.qmd  basis.qmd  data.qmd  glossary.qmd  index.qmd  lrp-backtest.qmd  lrp.qmd  one-pager.qmd  price-weight.qmd  robots.txt  seasonality.qmd  sell-now-compare.qmd  styles.css  weekly-trends.qmd
site/methodology/: basis.qmd  cpi.qmd  (+6 more)
tests/: conftest.py  test_clean.py  test_clovis_slaughter.py  test_cpi_deflator.py  test_lrp_backtest.py  test_lrp_load.py  test_manifests.py
(+6 files in other folders)
